--- a/blocks/hero-section/hero-section.css
+++ b/blocks/hero-section/hero-section.css
@@ -1,16 +1,11 @@
-/* Main carousel structure */
 .hero-section {
-  position: relative;
   margin-top: 2%;
-  z-index: 1;
 }
-
 .carousel {
   position: relative;
   width: 100%;
-  height: calc(90vh - var(--header-height, 64px));
+  height: 100%;
   min-height: 600px;
-  overflow: hidden;
   z-index: 1; 
 }
 
@@ -36,22 +31,18 @@
   top: 0;
   left: 0;
   opacity: 0;
-  display: block;
   transform: translateX(100%);
   transition: transform 0.5s ease, opacity 0.5s ease;
-  z-index: 1;
 }
 
 .slide.active {
   opacity: 1;
   transform: translateX(0);
-  z-index: 2;
 }
 
 .slide.prev {
   transform: translateX(-100%);
   opacity: 0;
-  z-index: 1;
 }
 
 .slide img {
@@ -63,10 +54,10 @@
 /* Text content */
 .hero-text {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50%;
+  width: 55%;
   max-width: 800px;
   text-align: center;
   z-index: 2;
@@ -81,6 +72,7 @@
   font-weight: var(--font-weight-light);
   color: var(--text-color);
   font-family: var(--heading-font-family);
+  text-align: center;
 }
 
 .hero-text p {
@@ -111,8 +103,6 @@
   display: flex;
   gap: 12px;
   justify-content: center;
-  padding: 0;
-  margin: 0;
 }
 
 .indicator {
@@ -126,31 +116,38 @@
 
 .indicator.active {
   background-color: #000000;
-  transform: scale(1.2);
 }
 
-/* Desktop styles */
 @media (min-width: 900px) {
   .hero-text {
     left: 5%;
+    top: 50%;
     transform: translateY(-60%);
-    text-align: center;
     width: 40%;
-    gap: 25px;
+    text-align: center;
+
   }
 
   .hero-text h1 {
     font-size: 3.5rem;
-    font-weight: var(--font-weight-light);
+    margin-bottom: 1.5rem;
   }
 
   .hero-text p {
     font-size: 1rem;
+    line-height: 1.6;
+  }
+
+  .carousel {
+    height: 90vh;
+    min-height: 600px;
   }
 
   .carousel-section {
-    gap: 80px; 
+    gap: 80px;
     margin-bottom: 3%;
   }
 }
+
+
 
