--- a/blocks/hero-section/hero-section.css
+++ b/blocks/hero-section/hero-section.css
@@ -1,10 +1,7 @@
-.hero-section {
-  margin-top: 2%;
-}
 .carousel {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 30vh;
   min-height: 600px;
   z-index: 1; 
 }
@@ -23,7 +20,6 @@
   margin-bottom: 3%;
 }
 
-/* Slide styles */
 .slide {
   width: 100%;
   height: 100%;
@@ -32,17 +28,20 @@
   left: 0;
   opacity: 0;
   transform: translateX(100%);
-  transition: transform 0.5s ease, opacity 0.5s ease;
+  transition: transform 0.5s ease;
+  z-index: 1;
 }
 
 .slide.active {
   opacity: 1;
   transform: translateX(0);
+  z-index: 2;
 }
 
 .slide.prev {
   transform: translateX(-100%);
   opacity: 0;
+  z-index: 1;
 }
 
 .slide img {
@@ -51,36 +50,28 @@
   object-fit: cover;
 }
 
-/* Text content */
 .hero-text {
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 55%;
+  width: 50%;
   max-width: 800px;
   text-align: center;
   z-index: 2;
-  font-family: var(--heading-font-family);
-  font-weight: var(--font-weight-light);
-  font-style: var(--font-style-normal);
 }
 
 .hero-text h1 {
   font-size: 1.8rem;
   margin-bottom: 1rem;
-  font-weight: var(--font-weight-light);
+  font-weight: 100;
   color: var(--text-color);
-  font-family: var(--heading-font-family);
-  text-align: center;
 }
 
 .hero-text p {
   font-size: 0.9rem;
   margin-bottom: 1.5rem;
   color: var(--text-color);
-  font-family: var(--body-font-family);
-  font-weight: var(--font-weight-light);
 }
 
 .hero-text a.button:any-link {
@@ -93,16 +84,16 @@
   color: var(--text-color);
   text-decoration: underline;
   font-size: 1rem;
-  font-weight: var(--font-weight-light);
-  font-family: var(--body-font-family);
+  font-weight: normal;
   text-transform: none;
 }
 
-/* Indicators */
 .carousel-indicators {
   display: flex;
   gap: 12px;
   justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 
 .indicator {
@@ -116,38 +107,28 @@
 
 .indicator.active {
   background-color: #000000;
+  transform: scale(1.2);
 }
 
 @media (min-width: 900px) {
   .hero-text {
-    left: 5%;
-    top: 50%;
-    transform: translateY(-60%);
-    width: 40%;
-    text-align: center;
-
+      left: 5%;
+      transform: translateY(-60%);
+      text-align: center;
+      width: 40%;
+      gap: 25px;
   }
 
   .hero-text h1 {
-    font-size: 3.5rem;
-    margin-bottom: 1.5rem;
+      font-size: 3.5rem;
+      font-weight: 100;
   }
 
   .hero-text p {
-    font-size: 1rem;
-    line-height: 1.6;
-  }
-
-  .carousel {
-    height: 90vh;
-    min-height: 600px;
+      font-size: 1rem;
   }
 
   .carousel-section {
-    gap: 80px;
-    margin-bottom: 3%;
+      gap: 0; 
   }
 }
-
-
-
